Added Post Effects

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     </head>
     <body>
         <div class="main--container">
-            <h1>Skull and Bones</h1>
+            <h1 class="main--title">Skull and Bones</h1>
         </div>
     </body>
 </html>
